feat(learning): implement UserLessonProgress tracking and enhance lesson/topic management with new metrics